# EbookTools

./: .gitignore  README.md  ai_search.py  calibre_tools.py  calibre_tools_localization.py  calibretools.py  conv.py  dev-requirements.txt  doctools.py  ebook_tools.py  ebook_utils.py  icotq_store.py  indra_tools.py  iq.py  kindle_tools.py  kindle_tools_localization.py  md_tools.py  metadata.py  pgl.py  pyproject.toml  requirements.txt  time_lines.py  wiki_exporter.ipynb  wiki_exporter_hist.ipynb  wiki_exporter_life.ipynb  wiki_exporter_next.ipynb
wiki_timelines_exporters/: wiki_europe.ipynb  wiki_exporter_tools.py  wiki_samples.ipynb
wiki_timelines_exporters/previous_data/: wiki_exporter.ipynb  wiki_exporter_next.ipynb
