[project]
name = "ebooktools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4",
    "einops",
    "indralib",
    "jupyterlab",
    "lxml",
    "lxml-stubs",
    "numpy",
    "pandas>=2.2.3",
    "pillow",
    "pycryptodome",
    "pymupdf",
    "pypdf",
    "pysdl2",
    "pysdl2-dll",
    "pyyaml",
    "rich",
    "sentence-transformers",
    "torch",
]
