[project]
name = "ebooktools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4",
    "einops",
    "indralib",
    "jupyterlab",
    "lxml",
    "lxml-stubs",
    "numpy",
    "pandas>=2.2.3",
    "pillow",
    "polars>=1.30.0",
    "pyarrow>=20.0.0",
    "pycryptodome",
    "pymupdf",
    "pypdf",
    "pysdl2",
    "pysdl2-dll",
    "pyyaml",
    "rich",
    "sentence-transformers",
    "torch",
]
